<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Flamme bêta</string>
    <string name="flamme_widget_search">Rechercher sur Qwant</string>
    <string name="flamme_widget_voice">Recherche vocale</string>
    <string name="flamme_widget_open">Ouvrir Flamme</string>
    <string name="flamme_widget_news">Actus</string>
    <string name="flamme_widget_mail">Mail</string>
    <string name="flamme_widget_maps">Carte</string>
    <string name="flamme_widget_ai">IA</string>
    <string name="flamme_widget_description">Recherche Qwant, raccourcis Flamme et recherche vocale.</string>
</resources>
